--- a/index.html
+++ b/index.html
@@ -285,10 +285,11 @@
                     </div>
                     <div class="plans">
                         <div class="plan first__plan">
-                            <div class="plan__border">
+                            <div class="plan__border plan__border--head">
                                 <div class="type">PERSONAL</div> 
                                 <div class="price">$17.99</div> 
-                                <div class="length">MONTHLY</div>     
+                                <div class="length">MONTHLY</div>  
+                                   
                             </div>
                             <br>
                             <div class="plan__border">
@@ -299,7 +300,7 @@
                                 <div class="perk">Basic Assistance</div>
                             </div>
                             <br>
-                            <div class="plan__border">
+                            <div class="plan__border plan__border--btn">
                                 <button class="buy one">BUY NOW</button>
                             </div>
                         </div>
@@ -323,7 +324,7 @@
                             </div>
                         </div>
                         <div class="plan third__plan">
-                            <div class="plan__border">
+                            <div class="plan__border plan__border--head-two">
                                 <div class="type">ENTERPRISE</div> 
                                 <div class="price">$57.99</div> 
                                 <div class="length">MONTHLY</div>     
@@ -337,7 +338,7 @@
                                 <div class="perk">Personal Assistance</div>
                             </div>
                             <br>
-                            <div class="plan__border">
+                            <div class="plan__border plan__border--btn">
                                 <button class="buy three">BUY NOW</button>
                             </div>
                         </div>
@@ -368,20 +369,21 @@
                             <i class="fas fa-star"></i>
                         </div>
                         <div class="subtitle">Amazing User Experience</div>
-                        <p class="test__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate obcaecati illum debitis tempore fugiat, fugit, ab aperiam eius modi, corporis illo nam! Dignissimos est explicabo corrupti eligendi quae atque, repellat molestias nisi ea quas earum obcaecati vero quidem voluptatum soluta.</p>
-                    </div>
-                    <div class="charlotte">
-                        <figure>
-                            <img src="/assets/charlotte.avif" class="char__img">
-                        </figure>
-                        <div class="row char__row">
-                            <div class="subtitle">Charlotte Hale
-                                <h5>Director, Delos Inc.</h5>
+                        <p class="test__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate obcaecati illum debitis tempore fugiat, fugit, ab aperiam eius modi, corporis illo nam! Dignissimos est explicabo corrupti eligendi quae atque, repellat molestias nisi ea quas earum obcaecati vero quidem voluptatum soluta.
+                        </p>
+                        <div class="charlotte">
+                            <figure>
+                                <img src="/assets/charlotte.avif" class="char__img">
+                            </figure>
+                            <div class="row char__row">
+                                <div class="subtitle">Charlotte Hale
+                                    <h5>Director, Delos Inc.</h5>
+                                </div>
                             </div>
-                        </div>
-                        <div class="arrows">
-                            <i class="fas fa-arrow-left"></i>
-                            <i class="fas fa-arrow-right"></i>
+                            <div class="arrows">
+                                <i class="fas fa-arrow-left"></i>
+                                <i class="fas fa-arrow-right"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
