--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <div class="logo">
                 <figure>
-                    <img src="images/logo.svg" class="t__icon">
+                    <img src="https://raw.githubusercontent.com/GuguButhelezi/Treact-first-attempt/b4c459a8f11322cd5e02e93a12d819679e71065d/images/logo.svg" class="t__icon">
                 </figure>
                 <label for="">Treact</label>
             </div>
@@ -71,12 +71,12 @@
                         </div>
                         <p class="fourth__para">OUR TRUSTED CUSTOMERS:</p>
                         <figure>
-                            <img src="images/fortune.png" class="fourth__img">
+                            <img src="https://github.com/GuguButhelezi/Treact-first-attempt/blob/master/images/fortune.png?raw=true" class="fourth__img">
                         </figure>
                     </div>
                     <div class="sixth">
                         <figure>
-                            <img src="images/prototype-illustration.svg">
+                            <img src="https://raw.githubusercontent.com/GuguButhelezi/Treact-first-attempt/b4c459a8f11322cd5e02e93a12d819679e71065d/images/prototype-illustration.svg">
                         </figure>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
 
                         <div class="feature">
                             <figure>
-                                <img src="images/shield-icon.svg" class="feature__img">
+                                <img src="https://raw.githubusercontent.com/GuguButhelezi/Treact-first-attempt/b4c459a8f11322cd5e02e93a12d819679e71065d/images/shield-icon.svg" class="feature__img">
                             </figure>
 
                             <div class="feature__description">
@@ -109,7 +109,7 @@
                         </div>
                         <div class="feature">
                             <figure>
-                                <img src="images/support-icon.svg" class="feature__img">
+                                <img src="https://raw.githubusercontent.com/GuguButhelezi/Treact-first-attempt/b4c459a8f11322cd5e02e93a12d819679e71065d/images/support-icon.svg" class="feature__img">
                             </figure>
 
                             <div class="feature__description">
@@ -119,7 +119,7 @@
                         </div>
                         <div class="feature">
                             <figure>
-                                <img src="images/customize.svg" class="feature__img">
+                                <img src="https://raw.githubusercontent.com/GuguButhelezi/Treact-first-attempt/b4c459a8f11322cd5e02e93a12d819679e71065d/images/customize.svg" class="feature__img">
                             </figure>
 
                             <div class="feature__description">
@@ -129,7 +129,7 @@
                         </div>
                         <div class="feature">
                             <figure>
-                                <img src="images/reliable-icon.svg" class="feature__img">
+                                <img src="https://raw.githubusercontent.com/GuguButhelezi/Treact-first-attempt/b4c459a8f11322cd5e02e93a12d819679e71065d/images/reliable-icon.svg" class="feature__img">
                             </figure>
 
                             <div class="feature__description">
@@ -139,7 +139,7 @@
                         </div>
                         <div class="feature">
                             <figure>
-                                <img src="images/fast-icon.svg" class="feature__img">
+                                <img src="https://raw.githubusercontent.com/GuguButhelezi/Treact-first-attempt/b4c459a8f11322cd5e02e93a12d819679e71065d/images/fast-icon.svg" class="feature__img">
                             </figure>
 
                             <div class="feature__description">
@@ -149,7 +149,7 @@
                         </div>
                         <div class="feature">
                             <figure>
-                                <img src="images/simple-icon.svg" class="feature__img">
+                                <img src="https://raw.githubusercontent.com/GuguButhelezi/Treact-first-attempt/b4c459a8f11322cd5e02e93a12d819679e71065d/images/simple-icon.svg" class="feature__img">
                             </figure>
 
                             <div class="feature__description">
@@ -179,7 +179,7 @@
                     </div>
                     <div class="right">
                         <figure class="template__example">
-                            <img src="images/hero-screenshot-1.png">
+                            <img src="https://github.com/GuguButhelezi/Treact-first-attempt/blob/master/images/hero-screenshot-1.png?raw=true">
                         </figure>
                     </div>
                 </div>
@@ -191,7 +191,7 @@
                 <div class="qw">
                     <div class="steps__pic">
                         <figure class="template__example">
-                            <img src="images/hero-screenshot-2.png">
+                            <img src="https://github.com/GuguButhelezi/Treact-first-attempt/blob/master/images/hero-screenshot-2.png?raw=true">
                         </figure>
                     </div>
                     <div class="steps">
@@ -353,7 +353,7 @@
                 <div class="row row__column row__column--test">
                     <div class="left">
                         <figure class="test">
-                            <img src="images/love-illustration.svg">
+                            <img src="https://raw.githubusercontent.com/GuguButhelezi/Treact-first-attempt/b4c459a8f11322cd5e02e93a12d819679e71065d/images/love-illustration.svg">
                         </figure>
                     </div>
                     <div class="right right__test">
@@ -373,7 +373,7 @@
                         </p>
                         <div class="charlotte">
                             <figure>
-                                <img src="images/charlotte.avif" class="char__img">
+                                <img src="https://raw.githubusercontent.com/GuguButhelezi/Treact-first-attempt/master/images/charlotte.avif" class="char__img">
                             </figure>
                             <div class="row char__row">
                                 <div class="subtitle">Charlotte Hale
@@ -516,7 +516,7 @@
         </div>
         <div class="footer__info">
             <figure>
-                <img src="images/logo.svg" alt="tlogo" class="t__foot"> Treact Inc.
+                <img src="https://raw.githubusercontent.com/GuguButhelezi/Treact-first-attempt/b4c459a8f11322cd5e02e93a12d819679e71065d/images/logo.svg" alt="tlogo" class="t__foot"> Treact Inc.
             </figure>
             <h5>&copy 2018 Treact Inc. All Rights Reserved.</h5>
             <div class="logos">
