--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Final Project</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
-    <script src="/index.js" defer></script>
+    <script src="index.js" defer></script>
 </head>
 <body>
     <div class="row">
